# toddlerfun

./: .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  main.c  theme.c  theme.h  toddlerfun.desktop.in
defaulttheme/: .gitignore  Makefile.am  README  theme.xml
doc/: TODO.txt
images/: README
po/: .gitignore  LINGUAS  POTFILES.in  sv.po
src/: .dir-locals.el  .gitignore  Makefile.am  main.c  theme.c  theme.h
