THEME_FILES = \
	baby.ogg \
	baby.svg \
	carrot.ogg \
	carrot.svg \
	cat.ogg \
	cat.svg \
	owl.ogg \
	owl.svg \
	sheep.ogg \
	sheep.svg \
	bach.ogg \
	theme.xml \
	README

themedir = $(pkgdatadir)/defaulttheme
theme_DATA = $(THEME_FILES)

EXTRA_DIST = \
	$(THEME_FILES)

-include $(top_srcdir)/git.mk